--- a/Selenium/pom.xml
+++ b/Selenium/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Selenium</groupId>
-  <artifactId>Selenium</artifactId>
+  <groupId>SelTestn</groupId>
+  <artifactId>SelTestn</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Selenium</name>
+  <name>SelTestn</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -21,5 +21,33 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.22.0</version>
+</dependency>
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.10.2</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/io.github.qsy7.java.modules.browser.drivers/chromedriver -->
+<dependency>
+    <groupId>io.github.qsy7.java.modules.browser.drivers</groupId>
+    <artifactId>chromedriver</artifactId>
+    <version>0.3.3</version>
+</dependency>
+
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>4.3.1</version>
+</dependency>
+
+
+    
+    
   </dependencies>
 </project>
